loader.c: Use portable printf conversion specifier for int64.

ASTERISK-30060 #close

Change-Id: I88d47a1488be2f39017b8d562f993f081844fcb8